[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "rhgardenservices"
version = "4.0.0"
description = "Corporate website for R H Garden Services"
authors = [
  { name = "Ben Gosney", email = "bengosney@googlemail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "boto3",
  "dj-database-url",
  "django",
  "django-csp",
  "django-health-check",
  "django-storages",
  "gunicorn",
  "honeybadger",
  "opencv-python-headless",
  "psycopg2",
  "redis",
  "rustface",
  "wagtail",
  "wheel",
  "whitenoise",
  "whitenoise[brotli]",
]

optional-dependencies.dev = [
  "django-debug-toolbar",
  "django-debugtools",
  "django-stubs",
  "icecream",
  "model-bakery",
  "mypy",
  "packaging",
  "pre-commit",
  "psycopg2",
  "pytest",
  "pytest-clarity",
  "pytest-cov",
  "pytest-django",
  "pytest-picked",
  "pytest-watch",
  "ruff",
  "wagtail-placeholder-images",
  "wrapt",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [ "migrations" ]

format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = true

lint.select = [ "C90", "DJ", "E", "ERA", "F", "FURB", "I", "N", "PERF", "PL", "RUF", "TRY", "UP" ]
lint.ignore = [ "RUF012" ]

lint.isort.section-order = [
  "future",
  "standard-library",
  "django",
  "wagtail",
  "third-party",
  "first-party",
  "local-folder",
]

lint.isort.sections.django = [ "django" ]
lint.isort.sections.wagtail = [ "wagtail" ]
